<resources>
    <string name="app_name">WeatherBuddy</string>
    <string name="zip">zip code</string>
    <string name="getWeatherButton">Get Weather</string>
    <string name="currentTemp">Temp:</string>
    <string name="maxTemp">Max:</string>
    <string name="minTemp">Min:</string>
    <string name="windSpeed">Wind:</string>
    <string name="celsius">°C</string>
    <string name="imageButton">get weather</string>
    <string name="help">Help</string>

    <!-- toolbar -->
    <string name="favorite">Favorite</string>
    <string name="saved">Saved Locations</string>
    <string name="unit">°C/F</string>
    <string name="setting">Setting</string>

    <!-- setting layout-->
    <string name="settingTitle">Settings</string>
    <string name="nickNameLabel">Nick Name</string>
    <string name="sound">Sound</string>
    <string name="toggle_on">Mute</string>
    <string name="toggle_off">ON</string>
    <string name="savebtn">save</string>
    <string name="hintText"></string>

    <!-- saved location -->
    <string-array name="savedLocations">
        <item>LOCATION_0</item>
        <item>LOCATION_1</item>
        <item>LOCATION_2</item>
        <item>LOCATION_3</item>
        <item>LOCATION_4</item>
        <item>LOCATION_5</item>
        <item>LOCATION_6</item>
        <item>LOCATION_7</item>
        <item>LOCATION_8</item>
        <item>LOCATION_9</item>
    </string-array>
<!--help content-->
    <string name="helpContent">1. To set a location: Long press the map marker and drag it to the destination
                or just type in a 5-digit zip code of the destination. \n2. Click the GetWeather button to get the
                current weather of selected location. \n3. Click the favorite button to save a location,
                before saving, please get the weather of that location first. \n4. Long click to delete saved locations.
                \n5. In Settings, users can set a username for greeting, and turn on/off audio report. </string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'WeatherBuddy\'.</string>
    <string name="permission_required_toast">Location permission is required.</string>
</resources>
